# alpha-search

./: .env.example  .gitignore  CHANGES_v0.2.2.md  CLAUDE_CODE_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ui  GETTING_STARTED_IDE.md  GOVERNANCE.md  LICENSE  README.md  RELEASE_CHECKLIST.md  REVIEW.md  SECURITY.md  SESSION_SUMMARY.md  TESTING_PLAN.md  chatgpt_handoff_prompt.md  docker-compose.yml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
agents/: alpha-search-architect.md  alpha-search-data-engineer.md  alpha-search-execution-engineer.md  alpha-search-global-market-opportunity-agent.md  alpha-search-project-coordinator.md  alpha-search-quant-engineer.md  alpha-search-research-agent.md  alpha-search-testing-devops.md  alpha-search-ui-developer.md
alpha_search/: __init__.py  __main__.py  terminal.py
artifacts/: AI_INFRASTRUCTURE_ALPHA_RESEARCH_PLAN.md
bb-terminal/: start.sh
docs/: MONETIZATION_ROADMAP.md  agent_swarm.md  architecture.md  index.md  openbb_comparison.md  quickstart.md  roadmap.md
memory/: README.md  agent_journal.md  alpha_search_memory.sqlite-shm  alpha_search_research.sqlite-shm  architecture_decisions.md  project_memory.md  risk_log.md  strategy_findings.md
nginx/: nginx.conf
notebooks/: 01_FRED_Macro_Analysis.ipynb  01_real_data_backtesting_colab.ipynb  02_Crypto_Analysis.ipynb  02_ai_infrastructure_alpha_research_colab.ipynb  03_SEC_Fundamentals.ipynb  04_Multi_Asset_Pipeline.ipynb  Alpha_Search_Demo.ipynb  README.md  Semiconductor_AI_Alpha_Research.ipynb
outputs/: active_opportunities_report.md  stock_opportunity_agent_report.md  stock_opportunity_llm_report.md  unified_opportunities_report.md
reports/: agent_swarm_report_6dd21e99.md  agent_swarm_report_6dd21e99.txt  alpha_search_strategy_research_report.docx  alpha_search_strategy_research_report.md  swarm_pipeline_combined_report.md
scripts/: analyze_bets.py  app_server.py  backup.sh  create_universe_agent.py  deploy.sh  find_thematic_opportunities.py  index.html  run_ai_infra_research.py  run_indian_etf_breakout.py  run_opportunity_agent_app.py  run_real_data_backtest.py  run_real_data_research.py  setup-vps.sh  (+8 more)
(+187 files in other folders)
